# tai

./: .dockerignore  Dockerfile  README.md  tai.code-workspace
app/: package-lock.json  package.json  tailwind.config.ts
app/src/app/: fonts.css  globals.css  layout.tsx  page.tsx
index/: 01_download.ipynb  02_index.ipynb  03_generate.ipynb  README.md  app.py  gunicorn.conf.py  poetry.toml  pyproject.toml
index/tai_index/: download_course.py  example.py  pil_wmf_stub_loader.py  pptx_reader.py
